--- a/main.css
+++ b/main.css
@@ -37,10 +37,9 @@ p {
 
 #outPopUp {
     position: absolute;
+    background-color: "";
+    padding: 1px;
     z-index: 15;
-    top: 50%;
-    left: 50%;
-    margin: -100px 0 0 -150px;
 }
 
 .badguys {
